pkg/clusteragent/appsec/testdata/extproc-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: datadog-aap-extproc-deployment
  namespace: datadog
  labels:
    app: datadog-aap-extproc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: datadog-aap-extproc
  template:
    metadata:
      labels:
        app: datadog-aap-extproc
    spec:
      containers:
        - name: datadog-aap-extproc-container
          image: ghcr.io/datadog/dd-trace-go/service-extensions-callout:latest
          ports:
            - name: grpc
              containerPort: 443 # Default gRPC port for the external processor
            - name: health
              containerPort: 80  # Default health check port
          env:
            - name: DD_APPSEC_BODY_PARSING_SIZE_LIMIT
              value: "10000000" # 10MB limit for body parsing

            # Requires v2.4.0+ of the extension
            # If you _must_ use TLS you need to create a BackendTLSPolicy
            # and use DD_SERVICE_EXTENSION_TLS_KEY_FILE and DD_SERVICE_EXTENSION_TLS_CERT_FILE
            - name: DD_SERVICE_EXTENSION_TLS
              value: "false"
          readinessProbe:
            httpGet:
              path: /
              port: health
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: health
            initialDelaySeconds: 15
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: datadog-aap-extproc-service # This name will be used in the EnvoyFilter configuration
  namespace: datadog
  labels:
    app: datadog-aap-extproc
spec:
  ports:
    - name: grpc
      port: 443
      targetPort: grpc
      protocol: TCP
  selector:
    app: datadog-aap-extproc
  type: ClusterIP
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: datadog-aap-extproc
  namespace: datadog
spec:
  from:
    - group: gateway.envoyproxy.io
      kind: EnvoyExtensionPolicy
      namespace: default
  to:
    - group: ""
      kind: Service
      name: datadog-aap-extproc-service
